[gd_scene load_steps=18 format=3 uid="uid://bjmkbjlquesr5"]

[ext_resource type="Script" path="res://Scripts/note_player.gd" id="1_f13wc"]
[ext_resource type="Shader" path="res://Art/background.gdshader" id="1_kmdog"]
[ext_resource type="Script" path="res://Scripts/StateMachine/StateMachine.gd" id="2_fbjv7"]
[ext_resource type="AudioStream" uid="uid://ceh67e6jrbjqd" path="res://Sound/Glockenspiel/A4.mp3" id="2_kwteg"]
[ext_resource type="Script" path="res://Scripts/StateMachine/StateMachineState_AnyKeyToContinue.gd" id="3_7fknr"]
[ext_resource type="AudioStream" uid="uid://4ils6cakgl7c" path="res://Sound/Glockenspiel/C4.mp3" id="3_80qxs"]
[ext_resource type="AudioStream" uid="uid://cyrha1manpije" path="res://Sound/Glockenspiel/E4.mp3" id="4_bf70j"]
[ext_resource type="FontFile" uid="uid://byymlkrvwrvqy" path="res://Fonts/Vintage Propagandist.ttf" id="4_rbybo"]
[ext_resource type="AudioStream" uid="uid://cqphq1wwuekp2" path="res://Sound/Glockenspiel/G4.mp3" id="5_8p2bg"]
[ext_resource type="Script" path="res://Scripts/StateMachine/StateMachineState_MainMenu.gd" id="5_r1cm3"]
[ext_resource type="PackedScene" uid="uid://e5uuxqqr5yeu" path="res://Scene/play.tscn" id="12_qmocg"]
[ext_resource type="Script" path="res://Scripts/ControlDecorator.gd" id="16_64sy8"]
[ext_resource type="Script" path="res://Scripts/options_canvas.gd" id="25_wf6kf"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_k3dey"]
noise_type = 3
frequency = 0.002
offset = Vector3(1, 1, -1)
fractal_type = 2
domain_warp_enabled = true
domain_warp_fractal_type = 2
domain_warp_fractal_octaves = 2

[sub_resource type="NoiseTexture3D" id="NoiseTexture3D_xst5d"]
width = 32
height = 32
depth = 32
noise = SubResource("FastNoiseLite_k3dey")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y2c8r"]
shader = ExtResource("1_kmdog")
shader_parameter/zoom = 10.0
shader_parameter/timeScale = 0.01
shader_parameter/color_a = Color(0.101961, 0.619608, 0.666667, 1)
shader_parameter/color_b = Color(0.666667, 0.666667, 0.498039, 1)
shader_parameter/noiseImage = SubResource("NoiseTexture3D_xst5d")

[sub_resource type="LabelSettings" id="LabelSettings_vam3j"]
font = ExtResource("4_rbybo")
font_size = 98
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AudioStreamPlayer_UI" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
bus = &"UI"

[node name="MusicManager" type="Node" parent="."]
unique_name_in_owner = true

[node name="AudioStreamPlayer_C4" type="AudioStreamPlayer" parent="MusicManager"]
stream = ExtResource("3_80qxs")
volume_db = -20.0
bus = &"Music"
script = ExtResource("1_f13wc")
duration = 5.0
note_name = "C4"
note_per_second = 0.9

[node name="AudioStreamPlayer_E4" type="AudioStreamPlayer" parent="MusicManager"]
stream = ExtResource("4_bf70j")
volume_db = -20.0
bus = &"Music"
script = ExtResource("1_f13wc")
duration = 7.0
note_name = "E4"
note_per_second = 0.81

[node name="AudioStreamPlayer_G4" type="AudioStreamPlayer" parent="MusicManager"]
stream = ExtResource("5_8p2bg")
volume_db = -20.0
bus = &"Music"
script = ExtResource("1_f13wc")
duration = 2.0
note_name = "G4"
note_per_second = 1.0
alternate_note = ExtResource("2_kwteg")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_y2c8r")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MenuStateMachine" type="Control" parent="MarginContainer" node_paths=PackedStringArray("initial_state")]
layout_mode = 2
script = ExtResource("2_fbjv7")
initial_state = NodePath("State_Splash")

[node name="State_Splash" type="Control" parent="MarginContainer/MenuStateMachine" node_paths=PackedStringArray("next_state")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_7fknr")
next_state = NodePath("../State_MainMenu")
time_out_in_seconds = 3.0
fade_out = true
fade_time = 0.5

[node name="CanvasLayer" type="CanvasLayer" parent="MarginContainer/MenuStateMachine/State_Splash"]
visible = false

[node name="Title" type="Label" parent="MarginContainer/MenuStateMachine/State_Splash/CanvasLayer"]
custom_minimum_size = Vector2(200, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -405.5
offset_top = -100.0
offset_right = 405.5
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 64
text = "Farmer McYoder
&
The Evolving Castle"
label_settings = SubResource("LabelSettings_vam3j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="State_Tools" type="Control" parent="MarginContainer/MenuStateMachine" node_paths=PackedStringArray("next_state")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_7fknr")
next_state = NodePath("../State_MainMenu")
fade_in = true
fade_out = true
fade_time = 0.5

[node name="CanvasLayer" type="CanvasLayer" parent="MarginContainer/MenuStateMachine/State_Tools"]
visible = false

[node name="GridContainer" type="GridContainer" parent="MarginContainer/MenuStateMachine/State_Tools/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -418.0
offset_top = -218.5
offset_right = 418.0
offset_bottom = 218.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 20
columns = 2

[node name="Label" type="Label" parent="MarginContainer/MenuStateMachine/State_Tools/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 52
text = "Tools:"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="MarginContainer/MenuStateMachine/State_Tools/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 52
text = "Godot 4
Audacity
Wavosaur
Gimp"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MenuStateMachine/State_Tools/CanvasLayer/GridContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/MenuStateMachine/State_Tools/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label3" type="Label" parent="MarginContainer/MenuStateMachine/State_Tools/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 52
text = "Fonts:"
horizontal_alignment = 2

[node name="Label4" type="Label" parent="MarginContainer/MenuStateMachine/State_Tools/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 20
text = "https://fontlibrary.org/en/font/vintage-propagandist
https://fontlibrary.org/en/font/destroya"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/MenuStateMachine/State_Tools/CanvasLayer/GridContainer"]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/MenuStateMachine/State_Tools/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label5" type="Label" parent="MarginContainer/MenuStateMachine/State_Tools/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 52
text = "Notes:"
horizontal_alignment = 2

[node name="Label6" type="Label" parent="MarginContainer/MenuStateMachine/State_Tools/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 20
text = "https://github.com/gleitz/midi-js-soundfonts/tree/gh-pages/MusyngKite"

[node name="State_Story" type="Control" parent="MarginContainer/MenuStateMachine" node_paths=PackedStringArray("next_state")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_7fknr")
next_state = NodePath("../State_MainMenu")
fade_in = true
fade_out = true
fade_time = 0.5

[node name="CanvasLayer" type="CanvasLayer" parent="MarginContainer/MenuStateMachine/State_Story"]
visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/MenuStateMachine/State_Story/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("4_rbybo")
theme_override_font_sizes/normal_font_size = 51
text = "How many times had Farmer McYoder warned little Urist to stay away from the crumbling castle?

And yet, the child must have pixie dust from brains, because just this morning ol' McYoder heard the plinking of wee' Urist's music box coming from the castle grounds.

''That blasted child of mine is going to get themselves kidnapped by ghosts, or worse, you mark my words!''

And so, McYoder set off... to make sure his wee little Urist came to no harm."

[node name="State_Credits" type="Control" parent="MarginContainer/MenuStateMachine" node_paths=PackedStringArray("next_state")]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_7fknr")
next_state = NodePath("../State_MainMenu")
fade_in = true
fade_out = true
fade_time = 0.5

[node name="CanvasLayer" type="CanvasLayer" parent="MarginContainer/MenuStateMachine/State_Credits"]
visible = false

[node name="GridContainer" type="GridContainer" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -377.0
offset_top = -248.0
offset_right = 377.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 20
columns = 2

[node name="Programming" type="Label" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 52
text = "Programming:
"
horizontal_alignment = 2

[node name="Prog_Jason" type="Label" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 52
text = "Jason Abbott
"

[node name="HSeparator7" type="HSeparator" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer/GridContainer"]
layout_mode = 2

[node name="HSeparator8" type="HSeparator" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Art" type="Label" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 52
text = "Art:
"
horizontal_alignment = 2

[node name="Art_Jason" type="Label" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 52
text = "Jason Abbott
"

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer/GridContainer"]
layout_mode = 2

[node name="HSeparator6" type="HSeparator" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="SoundMusic" type="Label" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 52
text = "Sound & Music:
"
horizontal_alignment = 2

[node name="Sound_Jason" type="Label" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 52
text = "Jason Abbott
"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer/GridContainer"]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Design" type="Label" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 52
text = "Design:
"
horizontal_alignment = 2

[node name="Design_Jason" type="Label" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 52
text = "Jason Abbott
"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer/GridContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Playtest" type="Label" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 52
text = "Playtest:
"
horizontal_alignment = 2

[node name="Playtest_Names" type="Label" parent="MarginContainer/MenuStateMachine/State_Credits/CanvasLayer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 52
text = "Jesse Decker
Jeff Hamilton
John Hegner
David Ziring
Tracy Larrabee
"
vertical_alignment = 1

[node name="State_MainMenu" type="Control" parent="MarginContainer/MenuStateMachine"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_r1cm3")

[node name="CanvasLayer" type="CanvasLayer" parent="MarginContainer/MenuStateMachine/State_MainMenu"]
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MenuStateMachine/State_MainMenu/CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -36.0
offset_right = 76.5
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Button_Play" type="Button" parent="MarginContainer/MenuStateMachine/State_MainMenu/CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 64
text = "Play"
flat = true

[node name="Decorator" type="ColorRect" parent="MarginContainer/MenuStateMachine/State_MainMenu/CanvasLayer/VBoxContainer/Button_Play"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("16_64sy8")

[node name="Button_Tools" type="Button" parent="MarginContainer/MenuStateMachine/State_MainMenu/CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 64
text = "Tools"
flat = true

[node name="Decorator" type="ColorRect" parent="MarginContainer/MenuStateMachine/State_MainMenu/CanvasLayer/VBoxContainer/Button_Tools"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("16_64sy8")

[node name="Button_Credits" type="Button" parent="MarginContainer/MenuStateMachine/State_MainMenu/CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 64
text = "Credits"
flat = true

[node name="Decorator" type="ColorRect" parent="MarginContainer/MenuStateMachine/State_MainMenu/CanvasLayer/VBoxContainer/Button_Credits"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("16_64sy8")

[node name="Button_Story" type="Button" parent="MarginContainer/MenuStateMachine/State_MainMenu/CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(300, 90)
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 64
text = "Story"
flat = true

[node name="Decorator" type="ColorRect" parent="MarginContainer/MenuStateMachine/State_MainMenu/CanvasLayer/VBoxContainer/Button_Story"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("16_64sy8")

[node name="State_Play" parent="MarginContainer/MenuStateMachine" instance=ExtResource("12_qmocg")]
unique_name_in_owner = true
layout_mode = 1

[node name="OptionsCanvas" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false
script = ExtResource("25_wf6kf")

[node name="ColorRect" type="ColorRect" parent="OptionsCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.41598, 0.41598, 0.41598, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsCanvas/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="OptionsCanvas/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 64
text = "Options"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="OptionsCanvas/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 20
columns = 2

[node name="Label" type="Label" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 40
text = "Master Volume:"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Min" type="Label" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 24
text = "Min"

[node name="MasterSlider" type="HSlider" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
value = 50.0

[node name="Max" type="Label" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 24
text = "Max"

[node name="Control3" type="Control" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Control4" type="Control" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label4" type="Label" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 40
text = "Music Volume:"
horizontal_alignment = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Min" type="Label" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 24
text = "Min"

[node name="MusicSlider" type="HSlider" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer/HBoxContainer3"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
value = 50.0

[node name="Max" type="Label" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 24
text = "Max"

[node name="Label2" type="Label" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 40
text = "FX Volume:"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Min" type="Label" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 24
text = "Min"

[node name="FXSlider" type="HSlider" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer/HBoxContainer2"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
value = 50.0

[node name="Max" type="Label" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 24
text = "Max"

[node name="Label5" type="Label" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 40
text = "UI Volume:"
horizontal_alignment = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Min" type="Label" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer/HBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 24
text = "Min"

[node name="UISlider" type="HSlider" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer/HBoxContainer4"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
value = 50.0

[node name="Max" type="Label" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer/HBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 24
text = "Max"

[node name="Control" type="Control" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Control2" type="Control" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label3" type="Label" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_rbybo")
theme_override_font_sizes/font_size = 40
text = "Show Blood:"
horizontal_alignment = 2

[node name="CheckBox" type="CheckBox" parent="OptionsCanvas/ColorRect/VBoxContainer/GridContainer"]
layout_mode = 2
button_pressed = true

[connection signal="button_up" from="MarginContainer/MenuStateMachine/State_MainMenu/CanvasLayer/VBoxContainer/Button_Play" to="MarginContainer/MenuStateMachine/State_MainMenu" method="_on_button_button_up"]
[connection signal="button_up" from="MarginContainer/MenuStateMachine/State_MainMenu/CanvasLayer/VBoxContainer/Button_Tools" to="MarginContainer/MenuStateMachine/State_MainMenu" method="_on_button_tools_button_up"]
[connection signal="button_up" from="MarginContainer/MenuStateMachine/State_MainMenu/CanvasLayer/VBoxContainer/Button_Credits" to="MarginContainer/MenuStateMachine/State_MainMenu" method="_on_button_credits_button_up"]
[connection signal="button_up" from="MarginContainer/MenuStateMachine/State_MainMenu/CanvasLayer/VBoxContainer/Button_Story" to="MarginContainer/MenuStateMachine/State_MainMenu" method="_on_button_story_button_up"]
[connection signal="value_changed" from="OptionsCanvas/ColorRect/VBoxContainer/GridContainer/HBoxContainer/MasterSlider" to="OptionsCanvas" method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="OptionsCanvas/ColorRect/VBoxContainer/GridContainer/HBoxContainer3/MusicSlider" to="OptionsCanvas" method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="OptionsCanvas/ColorRect/VBoxContainer/GridContainer/HBoxContainer2/FXSlider" to="OptionsCanvas" method="_on_fx_slider_value_changed"]
[connection signal="value_changed" from="OptionsCanvas/ColorRect/VBoxContainer/GridContainer/HBoxContainer4/UISlider" to="OptionsCanvas" method="_on_ui_slider_value_changed"]
[connection signal="toggled" from="OptionsCanvas/ColorRect/VBoxContainer/GridContainer/CheckBox" to="OptionsCanvas" method="_on_show_blood_toggled"]
